# home-automation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  expansion_analysis.md  install_docker_ubuntu.sh  package-lock.json  package.json  requirements.txt
config/: automations.yaml  devices.yaml  scenes.yaml
ha-config/: configuration.yaml
server/: __main__.py  config.py  discovery.py  discovery_generic.py  main.py  models.py
server/adapters/lights/: __init__.py  control.py  kasa.py  lifx.py  tuya.py
server/core/: events.py  registry.py
server/integrations/: ha.py
server/routes/: discovery.py  lights.py  music.py  outlets.py  speakers.py
server/util/: colors.py
voice-gateway/: FIXES_APPLIED.md  README.md  clear_caches.sh  config.py  main.py  plan.md  progress.md  pyproject.toml  realtime.py  realtime_system_prompt.txt  requirements.txt
voice-gateway/audio/: input.py  output.py
voice-gateway/diagnostics/: test_audio_output.py  test_wake.py
voice-gateway/gpt/: realtime_client.py
voice-gateway/pipeline/: __init__.py  capture.py  controller.py
voice-gateway/tools/: home_assistant.py  registry.py  weather.py
voice-gateway/utils/: single_instance.py
voice-gateway/vad/: silero.py
voice-gateway/wake/: vosk.py
