[project]
name = "voice-gateway"
version = "0.1.0"
description = "Wake word → STT (Whisper API) → GPT JSON → Home Assistant"
requires-python = ">=3.10,<3.12"  # OpenWakeWord/tflite-runtime wheels available on 3.10/3.11
dependencies = [
  "openwakeword==0.5.1",
  "sounddevice>=0.4.6",
  "numpy>=1.24,<2",
  "requests>=2.31",
  "python-dotenv>=1.0.0",
  "openai>=1.44.0",
]

[tool.uv]
index-strategy = "first-index"
